--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
@@ -9,4 +8,26 @@
     <color name="white">#FFFFFFFF</color>
     <color name="fondo_color">#E92DBAFA</color>
     <color name="menu_color">#D88FC8E3</color>
+    <integer-array name="inicio_colores">
+        <item>@color/purple_200</item>
+        <item>@color/purple_500</item>
+        <item>@color/purple_700</item>
+        <item>@color/teal_200</item>
+        <item>@color/teal_700</item>
+        <item>@color/purple_200</item>
+        <item>@color/purple_500</item>
+        <item>@color/purple_700</item>
+        <item>@color/teal_200</item>
+        <item>@color/teal_700</item>
+        <item>@color/purple_200</item>
+        <item>@color/purple_500</item>
+        <item>@color/purple_700</item>
+        <item>@color/teal_200</item>
+        <item>@color/purple_200</item>
+        <item>@color/purple_500</item>
+        <item>@color/purple_700</item>
+        <item>@color/teal_200</item>
+        <item>@color/teal_700</item>
+        <item>@color/purple_200</item>
+    </integer-array>
 </resources>
