--- a/app/src/main/res/layout/activity_constraint.xml
+++ b/app/src/main/res/layout/activity_constraint.xml
@@ -24,6 +24,7 @@
             android:layout_width="120dp"
             android:layout_height="180dp"
             android:layout_marginTop="104dp"
+            android:background="@drawable/myrect"
 
             android:contentDescription="@string/data_analysis"
             android:elevation="20dp"
