--- a/app/src/main/res/menu/activity_main_menu.xml
+++ b/app/src/main/res/menu/activity_main_menu.xml
@@ -11,6 +11,10 @@
                     android:id="@+id/contraint_layout"
                     android:icon="@drawable/ic_baseline_description_24"
                     android:title="@string/constraint_layout" />
+                <item
+                    android:id="@+id/nestedscrollview"
+                    android:icon="@drawable/ic_baseline_description_24"
+                    android:title="@string/nestedscrollview" />
             </menu>
         </item>
     </group>
