--- a/app/src/main/res/menu/activity_main_menu.xml
+++ b/app/src/main/res/menu/activity_main_menu.xml
@@ -15,6 +15,10 @@
                     android:id="@+id/nestedscrollview"
                     android:icon="@drawable/ic_baseline_description_24"
                     android:title="@string/nestedscrollview" />
+                <item
+                    android:id="@+id/collapsing"
+                    android:icon="@drawable/ic_baseline_description_24"
+                    android:title="@string/collapsingtoolbarlayout" />
             </menu>
         </item>
     </group>
